--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,246 +1,196 @@
-name: Daily Curriculum Reels
+# .github/workflows/daily.yml
+name: Daily Reel
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      series:
+        description: "Choose a single series to run (math_of_ML | MAS | mixed). Leave empty to run all."
+        required: false
+        default: ""
   schedule:
-    - cron: "0 14 * * *"   # ~08:00 America/Chicago (adjust if needed)
+    # Run once a day at 15:05 UTC (10:05a Chicago)
+    - cron: "5 15 * * *"
+
+concurrency:
+  group: daily-reel-${{ github.ref }}
+  cancel-in-progress: false
 
 permissions:
-  contents: write          # needed for pushing to gh-pages with GITHUB_TOKEN
+  contents: write
+  actions: read
+
+env:
+  PYTHONUNBUFFERED: 1
+  PYTHONPATH: ${{ github.workspace }}
+  BG_COLOR: 0x101426
+  VIS_GEN_MODEL: gpt-4o-mini
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       fail-fast: false
       matrix:
-        series: [math_of_ML, MAS, mixed]
-
-    env:
-      PYTHONUNBUFFERED: 1
-      PYTHONPATH: ${{ github.workspace }}
-      BG_COLOR: "0x101426"                 # quote to preserve hex string
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        series: ${{ fromJSON( (github.event.inputs.series != '' && format('["{0}"]', github.event.inputs.series)) || '["math_of_ML","MAS","mixed"]' ) }}
 
     steps:
-      # -------------------------
-      # 0) Repo + Python + system deps
-      # -------------------------
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install system packages (ffmpeg, graphviz, jq, Cairo/Pango + dev headers)
+      - name: Install system deps (ffmpeg, fonts, jq)
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y \
-            ffmpeg graphviz jq \
-            libcairo2 libpango-1.0-0 libpangocairo-1.0-0 \
-            libcairo2-dev libpango1.0-dev pkg-config python3-dev \
-            python3-cairo
+          sudo apt-get install -y ffmpeg fonts-dejavu-core jq
 
-      - name: Install Python deps (prefer vendored wheels, then build manimpango)
+      - name: Install Python deps (prefer vendor wheels)
         run: |
           set -e
-          python -m pip install --upgrade pip
-
-          # 1) Prefer vendored wheels you committed in vendor/wheels (downloaded with --no-deps)
-          if ls vendor/wheels/*.whl 1> /dev/null 2>&1; then
-            echo "Installing vendored wheels from vendor/wheels/…"
-            pip install --no-index --find-links vendor/wheels vendor/wheels/*.whl
+          python -m pip install --upgrade pip wheel
+          if [ -d vendor/wheels ]; then
+            echo "Installing from vendor/wheels…"
+            python -m pip install --no-index --find-links vendor/wheels \
+              numpy pillow matplotlib networkx graphviz \
+              plotly kaleido vpython moderngl moderngl-window \
+              pyyaml requests orjson
           else
-            echo "WARN: No vendored wheels found; falling back to PyPI."
+            echo "vendor/wheels not found; installing from PyPI…"
+            python -m pip install \
+              numpy pillow matplotlib networkx graphviz \
+              plotly kaleido vpython moderngl moderngl-window \
+              pyyaml requests orjson
           fi
 
-          # 2) Build & install manimpango from source (no wheel for Linux cp311)
-          #    This requires the dev headers installed above.
-          pip install "manimpango==0.6.0"
-
-          # 3) Install manim (lets pip pull its remaining light deps)
-          pip install "manim==0.19.0"
-
-          # 4) Light extras you use elsewhere
-          pip install --upgrade pyyaml requests soundfile
-
-      # Ensure minimal runtime state exists (helps first run)
-      - name: Initialize season file if missing
+      - name: Prepare folders
         run: |
-          mkdir -p data
-          test -f data/season.json || echo '{"next_episode":1}' > data/season.json
-          echo "season.json:" && cat data/season.json || true
+          set -e
+          mkdir -p "out/${{ matrix.series }}"
 
-      # -------------------------
-      # 1) Plan next episode for this series
-      # -------------------------
-      - name: Plan next
+      # ---------- PLAN & NARRATION ----------
+      - name: Plan next episode
         env:
           SERIES: ${{ matrix.series }}
         run: |
+          set -e
           python planner/plan_next.py --series "${SERIES}"
 
-      # Helpful visibility: what did we just create?
-      - name: Inspect out tree
-        run: |
-          echo "SERIES=${{ matrix.series }}"
-          find out -maxdepth 3 -type f -name 'plan.json' -print || true
-          find out -maxdepth 3 -type f -name 'narration.txt' -print || true
-
-      # Detect whether an episode directory exists for this series
-      - name: Detect episode for this series
-        id: ep
-        run: |
-          series="${{ matrix.series }}"
-          EP=$(ls -td out/"$series"/ep_* 2>/dev/null | head -n1 || true)
-          if [ -z "$EP" ]; then
-            echo "found=false" >> $GITHUB_OUTPUT
-            echo "No episode folder for $series — downstream steps will be skipped."
-          else
-            echo "found=true" >> $GITHUB_OUTPUT
-            echo "ep=$EP" >> $GITHUB_OUTPUT
-            echo "Episode: $EP"
-          fi
-
-      # -------------------------
-      # 2) Director (strict to textbook excerpt) → narration.txt
-      # -------------------------
-      - name: Write narration (director, strict)
-        if: steps.ep.outputs.found == 'true'
-        run: |
-          python planner/agent_director.py
-
-      # -------------------------
-      # 3) Shotlist (12–18 beats)
-      # -------------------------
-      - name: Make shotlist
-        if: steps.ep.outputs.found == 'true'
-        run: |
-          python planner/make_shotlist.py
-
-      # -------------------------
-      # 4) TTS (voice.wav) — robust finder + placeholder fallback
-      # -------------------------
-      - name: Synthesize voice (TTS)
-        if: steps.ep.outputs.found == 'true'
+      - name: Write narration (LLM)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           set -e
-          series="${{ matrix.series }}"
-          EP="${{ steps.ep.outputs.ep }}"
-          echo "Episode dir: $EP"
+          python planner/agent_director.py
 
-          CANDIDATES=("tts_openai.py" "generator/tts_openai.py" "audio/tts_openai.py" "tools/tts_openai.py")
-          FOUND=""
-          for C in "${CANDIDATES[@]}"; do
-            if [ -f "$C" ]; then
-              echo "Using TTS script: $C"
-              python "$C" --series "$series"
-              FOUND="yes"
-              break
-            fi
-          done
-
-          # Fallback: if no TTS script present, create short silent voice.wav so pipeline continues
-          if [ -z "$FOUND" ]; then
-            echo "WARN: No tts_openai.py found; creating placeholder voice.wav (2s)."
-            mkdir -p "$EP/assets"
-            ffmpeg -y -f lavfi -i anullsrc=r=48000:cl=mono -t 2.0 -c:a pcm_s16le "$EP/assets/voice.wav"
-          fi
-
-      # -------------------------
-      # 5) Background (hardened; then clamp to 90s)
-      # -------------------------
-      - name: Generate background
-        if: steps.ep.outputs.found == 'true'
+      - name: Make SRT from narration
+        env:
+          SERIES: ${{ matrix.series }}
         run: |
-          python generator/gen_background.py --series "${{ matrix.series }}"
+          set -e
+          python generator/make_srt.py --series "${SERIES}"
 
-      - name: Cap background to 90s (safety)
-        if: steps.ep.outputs.found == 'true'
+      - name: Route shots (beats & timings)
+        env:
+          SERIES: ${{ matrix.series }}
         run: |
-          EP="${{ steps.ep.outputs.ep }}"
-          if [ -f "$EP/assets/bg.mp4" ]; then
-            ffprobe -v error -show_entries format=duration -of default=nokey=1:noprint_wrappers=1 "$EP/assets/bg.mp4" || true
-            ffmpeg -y -i "$EP/assets/bg.mp4" -t 90 -c copy "$EP/assets/bg.mp4"
-            echo "[cap] bg.mp4 clamped to 90s"
-          fi
+          set -e
+          python generator/route_shots.py --series "${SERIES}"
 
-      # -------------------------
-      # 6) Route beats to shots, then cut visuals; clamp
-      # -------------------------
-      - name: Route beats to shots
-        if: steps.ep.outputs.found == 'true'
+      # ---------- WB3: LLM → CODE → RENDER ----------
+      - name: Generate per-beat visuals code (LLM → Python)
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          SERIES: ${{ matrix.series }}
         run: |
-          python generator/route_shots.py --series "${{ matrix.series }}"
+          set -e
+          python generator/gen_visuals_code.py --series "${SERIES}"
 
-      - name: Cut visuals to narration
-        if: steps.ep.outputs.found == 'true'
+      - name: Render per-beat visuals
+        env:
+          SERIES: ${{ matrix.series }}
         run: |
-          python assembly/cut_visuals.py --series "${{ matrix.series }}"
+          set -e
+          python generator/render_visuals.py --series "${SERIES}"
 
-      - name: Cap visuals to 90s (safety)
-        if: steps.ep.outputs.found == 'true'
+      # ---------- BACKGROUND & CUT ----------
+      - name: Generate background (fallback/safety)
+        env:
+          SERIES: ${{ matrix.series }}
         run: |
-          EP="${{ steps.ep.outputs.ep }}"
-          if [ -f "$EP/assets/visuals.mp4" ]; then
-            ffprobe -v error -show_entries format=duration -of default=nokey=1:noprint_wrappers=1 "$EP/assets/visuals.mp4" || true
-            ffmpeg -y -i "$EP/assets/visuals.mp4" -t 90 -c copy "$EP/assets/visuals.mp4"
-            echo "[cap] visuals.mp4 clamped to 90s"
-          fi
+          set -e
+          python generator/gen_background.py --series "${SERIES}"
 
-      # -------------------------
-      # 7) Build the final (combines bg + visuals + audio/subs)
-      # -------------------------
-      - name: Build final video
-        if: steps.ep.outputs.found == 'true'
+      - name: Cut visuals (assemble beats)
+        env:
+          SERIES: ${{ matrix.series }}
         run: |
-          python assembly/build_video.py --series "${{ matrix.series }}"
+          set -e
+          python assembly/cut_visuals.py --series "${SERIES}"
 
-      - name: Cap final MP4 to 90s (safety)
-        if: steps.ep.outputs.found == 'true'
+      # ---------- TTS & FINAL ASSEMBLY ----------
+      - name: Voiceover (TTS)
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          SERIES: ${{ matrix.series }}
         run: |
-          series="${{ matrix.series }}"
-          FINAL=$(ls -t out/"$series"/final/*.mp4 2>/dev/null | head -n1 || true)
-          if [ -n "$FINAL" ]; then
-            ffprobe -v error -show_entries format=duration -of default=nokey=1:noprint_wrappers=1 "$FINAL" || true
-            ffmpeg -y -i "$FINAL" -t 90 -c copy "$FINAL"
-            echo "[cap] final clamped to 90s"
-          fi
+          set -e
+          # adjust if your TTS entrypoint differs
+          python tts_openai.py --series "${SERIES}"
 
-      # -------------------------
-      # 8) Resolve final mp4 & caption (jq)
-      # -------------------------
+      - name: Build final MP4
+        env:
+          SERIES: ${{ matrix.series }}
+        run: |
+          set -e
+          python assembly/build_video.py --series "${SERIES}"
+
+      - name: Validate final MP4
+        env:
+          SERIES: ${{ matrix.series }}
+        run: |
+          set -e
+          python assembly/validate_video.py --series "${SERIES}"
+
+      # ---------- RESOLVE OUTPUT & CAPTION (bash + jq; no inline Python) ----------
       - name: Resolve final mp4 & caption
-        if: steps.ep.outputs.found == 'true'
         id: meta
+        env:
+          SERIES: ${{ matrix.series }}
         run: |
-          set -euo pipefail
-          series="${{ matrix.series }}"
+          set -e
+          series="${SERIES}"
 
-          PLAN="$(ls -t out/${series}/ep_*/plan.json 2>/dev/null | head -n1 || true)"
+          # Latest plan.json
+          PLAN="$(ls -t "out/${series}"/ep_*/plan.json 2>/dev/null | head -n1 || true)"
           MP4=""
-          if [ -n "$PLAN" ]; then
+          if [ -n "$PLAN" ] && [ -f "$PLAN" ]; then
             MP4="$(jq -r '.video_path // ""' "$PLAN")"
           fi
+          # Fallback: latest mp4 in final/
           if [ -z "$MP4" ] || [ ! -f "$MP4" ]; then
-            MP4="$(ls -t out/${series}/final/*.mp4 2>/dev/null | head -n1 || true)"
+            MP4="$(ls -t "out/${series}"/final/*.mp4 2>/dev/null | head -n1 || true)"
           fi
-          if [ -z "$MP4" ]; then
-            echo "No final mp4 found" >&2; exit 1
+          if [ -z "$MP4" ] || [ ! -f "$MP4" ]; then
+            echo "No final mp4 found" >&2
+            exit 1
           fi
-          FILE_BASENAME="$(basename "$MP4")"
 
-          # Episode dir (for title/overlay)
+          FILE_BASENAME="$(basename "$MP4")"
+          EP_DIR=""
           if [ -n "$PLAN" ]; then
             EP_DIR="$(dirname "$PLAN")"
           else
+            # derive ep dir from MP4 path (…/ep_xxx/final/xxx.mp4 → …/ep_xxx)
             EP_DIR="$(dirname "$(dirname "$MP4")")"
           fi
+
           TITLE="$(cat "$EP_DIR/assets/title.txt" 2>/dev/null || echo "${series} Daily")"
           OVERLAY="$(cat "$EP_DIR/assets/overlay.txt" 2>/dev/null || echo "New episode!")"
           CAPTION="${TITLE} — ${OVERLAY}"
@@ -248,64 +198,82 @@ jobs:
           {
             echo "mp4=$MP4"
             echo "file=$FILE_BASENAME"
+            echo "ep_dir=$EP_DIR"
             echo "caption<<EOF"
             echo "$CAPTION"
             echo "EOF"
           } >> "$GITHUB_OUTPUT"
 
-      # -------------------------
-      # 9) Publish to gh-pages (token-auth clone)
-      # -------------------------
-      - name: Publish MP4 to gh-pages
-        if: steps.ep.outputs.found == 'true'
+      # ---------- PUBLISH TO GH-PAGES (tokened remote; no heredocs) ----------
+      - name: Push MP4 to gh-pages
         id: publish
         env:
-          GH_REPO: ${{ github.repository }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SERIES: ${{ matrix.series }}
+          REPO: ${{ github.repository }}
         run: |
-          set -euo pipefail
-          series="${{ matrix.series }}"
+          set -e
+          series="${SERIES}"
           FILE="${{ steps.meta.outputs.mp4 }}"
-          NAME="${series}-${{ github.run_id }}.mp4"
+          NAME="${series}-${GITHUB_RUN_ID}.mp4"
 
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
           if [ ! -d site ]; then
             git clone --depth=1 --branch gh-pages \
-              "https://x-access-token:${GH_TOKEN}@github.com/${GH_REPO}.git" site
+              "https://x-access-token:${GH_TOKEN}@github.com/${REPO}.git" site
           fi
 
-          mkdir -p "site/reels/$series"
-          cp "$FILE" "site/reels/$series/$NAME"
+          mkdir -p "site/reels/${series}"
+          cp "$FILE" "site/reels/${series}/${NAME}"
 
           cd site
-          git add "reels/$series/$NAME"
-          git commit -m "reel: $NAME ($series) from run ${{ github.run_id }}" || true
-          git pull --rebase origin gh-pages || true
-          git push origin HEAD:gh-pages
+          git add "reels/${series}/${NAME}"
+          git commit -m "reel: ${NAME} (${series}) from run ${GITHUB_RUN_ID}" || true
 
-          echo "name=$NAME" >> "$GITHUB_OUTPUT"
+          for i in 1 2 3 4 5; do
+            git pull --rebase origin gh-pages || true
+            if git push origin HEAD:gh-pages; then
+              break
+            fi
+            echo "Push failed (attempt $i). Retrying…"
+            sleep 2
+            if [ "$i" = "5" ]; then
+              echo "Push failed after retries"
+              exit 1
+            fi
+          done
 
-      # -------------------------
-      # 10) Post to Instagram (REAL for math_of_ML, DRY for others)
-      # -------------------------
-      - name: Post to Instagram (REAL for math_of_ML)
-        if: steps.ep.outputs.found == 'true' && matrix.series == 'math_of_ML'
+          URL="https://${REPO%%/*}.github.io/${REPO#*/}/reels/${series}/${NAME}"
+          {
+            echo "name=$NAME"
+            echo "url=$URL"
+          } >> "$GITHUB_OUTPUT"
+
+      # ---------- POST TO INSTAGRAM ----------
+      - name: Post to Instagram (math_of_ML real; others dry)
+        if: always()
         env:
+          SERIES: ${{ matrix.series }}
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
         run: |
-          URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/reels/${{ matrix.series }}/${{ steps.publish.outputs.name }}"
-          CAP="${{ steps.meta.outputs.caption }}"
-          echo "Posting (REAL) for ${{ matrix.series }}: $URL"
-          python publisher/post_instagram.py "$URL" "$CAP"
+          set -e
+          series="${SERIES}"
+          URL="${{ steps.publish.outputs.url }}"
+          CAPTION="${{ steps.meta.outputs.caption }}"
 
-      - name: Post to Instagram (DRY for non-math_of_ML)
-        if: steps.ep.outputs.found == 'true' && matrix.series != 'math_of_ML'
-        run: |
-          URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/reels/${{ matrix.series }}/${{ steps.publish.outputs.name }}"
-          CAP="${{ steps.meta.outputs.caption }}"
-          echo "DRY-RUN (no publish) for ${{ matrix.series }}:"
-          echo "  URL: $URL"
-          echo "  CAP: $CAP"
+          echo "Series: $series"
+          echo "URL: $URL"
+
+          if [ "$series" = "math_of_ML" ]; then
+            if [ -z "$IG_ACCESS_TOKEN" ] || [ -z "$IG_USER_ID" ]; then
+              echo "Instagram secrets missing; skipping real post."
+              exit 0
+            fi
+            echo "Posting (REAL) for ${series}: $URL"
+            python publisher/post_instagram.py "$URL" "$CAPTION"
+          else
+            echo "[dry-run] Would post for ${series}: $URL"
+          fi
